[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correctover-compliance-check"
version = "1.1.1"
readme = "README.md"
description = "MCP OAuth 2.1 & CCS v1.0 Compliance Checker — enforce the 2026-07-28 mandate"
license = { text = "Apache-2.0" }
authors = [{ name = "Correctover", email = "wangguigui@correctover.com" }]
keywords = ["compliance", "oauth2.1", "ccs", "mcp", "correctover", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.urls]
Homepage = "https://correctover.com"
Repository = "https://github.com/Correctover/compliance-check"
Issues = "https://github.com/Correctover/compliance-check/issues"

[project.scripts]
correctover-compliance-check = "correctover_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["correctover_agent"]
