[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correctover-compliance-check"
version = "1.1.2"
description = "MCP OAuth 2.1 & CCS v1.0 compliance checker — enforce the 2026-07-28 mandate. 18 checks across OAuth, CCS standard, MCP protocol. First formal agent runtime standard (DOI: 10.5281/zenodo.21234580)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Correctover", email = "wangguigui@correctover.com" }]
keywords = ["compliance", "oauth2", "ccs", "mcp", "ai-agent", "correctover", "audit", "certification", "model-context-protocol", "security-standard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.urls]
Homepage = "https://correctover.com"
Repository = "https://github.com/Correctover/compliance-check"
Issues = "https://github.com/Correctover/compliance-check/issues"

[project.scripts]
correctover-compliance-check = "correctover_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["correctover_agent"]
